# miniosl

./: .gitignore  .gitmodules  AUTHORS.osl  CMakeLists.txt  LICENSE.osl  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
doc-api/: doxygen.conf
doc-api/source/: conf.py  index.rst  miniosl.inference.rst  miniosl.rst  minioslcc.rst  osl.rst
miniosl/: __init__.py  curses_viewer.py  dataset.py  drawing.py  inference.py  network.py  player.py  puzzle.py  record.py  search.py  state.py  ui.py  usi_process.py  widget.py
miniosl/sample/: puzzle1.json  puzzle2.json
miniosl/sample/checkmate/: A1-2.json  A1-3-1.json  A1-3-2.json  A1-4-1.json  A1-4-2.json  A1-5-1.json  A1-5-2.json  A2-1.json  A2-2.json  A2-3.json  A2-4.json  A3-1.json  A3-2.json  A3-3.json  A3-4.json  B1-1.json  B1-2.json  B1-3.json  B1-4.json  B1-5.json  B1-6.json  B1-7.json  B1-8.json  B2-1.json  B2-2.json  B2-3.json  B2-4.json  B2-5.json  B2-6.json  B2-7.json  B2-8.json  B3-1.json  B3-2.json  B3-3.json  B3-4.json  B3-5.json  B3-6.json  B3-7.json  B4-1.json  B4-2.json  (+27 more)
miniosl/utility/: book.py  convert_record.py  curses_viewer.py  model.py  selfplay.py
minioslcc/: CMakeLists.txt
minioslcc/src/: base-state.cc  base-state.h  basic-type.cc  basic-type.h  bitpack.cc  bitpack.h  checkmate.cc  checkmate.h  feature.cc  feature.h  game.cc  game.h  infer.h  miniosl-state.cc  miniosl.cc  more.cc  more.h  opening.cc  opening.h  record.cc  record.h  state.cc  state.h
minioslcc/src/impl/: bitpack.cc  bitpack.h  checkmate.cc  checkmate.h  details.h  effect.cc  effect.h  hash.cc  hash.h  japanese.cc  more.cc  more.h  range-parallel.h  rng.cc  rng.h
minioslcc/src/pyb/: miniosl-game.cc  miniosl-state.cc  miniosl.cc  miniosl.h  np.h
minioslcc/test/: filepath.h  minitest-file-record.cc  minitest-file.cc  minitest.cc  minitest_file.cc  test816k.cc
minioslcc/util/: compress-sfen.cc  csa-to-sfen.cc  validate-sfen.cc
sample/: self-play.py  sfen-stat.py  sfen-to-npz.py  sfen-to-training-npz.py  train-by-torch.py  train-move-dst.py  train.py
scripts/: selfplay  shogibook  shogiconvert  shogimodel  shogiviewer
tests/: test_basic_type.py  test_drawing.py  test_record.py  test_state.py  test_ui.py
